swagger doc improved
